# scripty

./: .gitignore  README.md  biome.json  deno.jsonc  package.json
flyio-openid-token/: README.md  flyio_openid_token.go
helpy/: .env.example  .env.gpg  .gitignore  Cargo.toml  README.md  build.sh
helpy/src/: bunny-regions.rs  scw-runtimes.rs
ip/: README.md  deno.jsonc  ip.ts
